# virtualpc

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  build  cpu.c  cpu.h  mem.h  misc  pc  pc.c  pc.h
common/include/: array.h  instruction.h  registers.h
common/include/cvm/: cvm.h
common/include/iset/: instructions.h  micro.h
common/src/: array.c  registers.c
include/: bus.h  cpu.h  exception.h  mem.h  pc.h
include/vio/: devicecat.h  vio.h
include/vio/dev/: term.h
ncas/: CMakeLists.txt
ncas/include/: analyzer.h  compiler.h  context.h  cutter.h  lexer.h  mnemonics.h  model.h  parser.h  token.h  tokenizer.h
ncas/src/: analyzer.c  compiler.c  cutter.c  lexer.c  main.c  mnemonics.c  model.c  parser.c  tokenizer.c
pc/: CMakeLists.txt
pc/include/: bus.h  cpu.h  exception.h  main.h
pc/include/cpu/: implcat.h  instruction.h  operand.h
pc/include/cpu/cat/: cat.h  instructions.h  instructions_byte.h  instructions_dword.h  instructions_micro.h  instructions_word.h
pc/include/vio/: vio.h
pc/include/vio/dev/: term.h
pc/src/: bus.c  cpu.c  main.c  mem.c  pc.c
pc/src/cpu/: operand.c
pc/src/cpu/cat/: cat.c  instructions_byte.c  instructions_micro.c
pc/src/vio/: vio.c
pc/src/vio/dev/: term.c
programs/: printer.nas  printersimple.nas  syntax.nas
src/: basm.c  bus.c  cpu.c  cpu.h  gpu.h  main.c  main.h  mem.c  pc.c  pc.h
src/cpu/cat/: cat.c
src/dev/: term.c  term.h
src/is/basic/: basic.c  basic.h
src/vio/: vio.c  vio.h
src/vio/dev/: term.c
test/: hello.basm
